--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,12 @@
 <% if valid(@search_text) %>
   <% if valid(@phone_number) %>
-    <p><%= img(call_giphy(@search_text)) %></p>
-    Sent gif related to search text "<%= @search_text %>" to phone number "<%= @phone_number %>".
+    <% handle_response(call_giphy(@search_text)) %>
+    <% if valid(@full_gif) %>
+      <p><%= img(@full_gif) %></p>
+      Sent gif related to search text "<%= @search_text %>" to phone number "<%= @phone_number %>".
+    <% else %>
+      No results for search text "<%= @search_text %>".
+    <% end %>
   <% else %>
     Please enter a valid phone number.
   <% end %>
