--- a/views/form.erb
+++ b/views/form.erb
@@ -1,3 +1,4 @@
+<% #TODO: investigate form helpers? may not be a thing in Sinatra. %>
 <form>
   <p>Search terms: <input type="text" name="s"></p>
   <p>Phone number: <input type="text" name="p"></p>
