--- a/views/form.erb
+++ b/views/form.erb
@@ -1,4 +1,4 @@
-<% #TODO: investigate form helpers? may not be a thing in Sinatra. %>
+<% #TODO: investigate form helpers. Might be worth including if the project gets larger.  %>
 <form>
   <p>Search terms: <input type="text" name="s"></p>
   <p>Phone number: <input type="text" name="p"></p>
