--- a/views/index.erb
+++ b/views/index.erb
@@ -1,23 +1,23 @@
-<% #TODO: move logic out of views? not sure what the right way to do this is %>
 <% #TODO: investigate using flash messages %>
-<% if @search_text %>
-  <% handle_response(call_giphy(@search_text)) %>
-  <% if @full_gif %>
-    <p><%= img(@full_gif) %></p>
-  <% else %><% #@full_gif is nil %>
+<% if @search_text.nil? %>
+  <p>Please enter valid search text.</p>
+<% else %><% # search text is valid %>
+  <% if @results.empty? %>
     <p>No results for search text "<%= @search_text %>".</p>
+  <% else %><% # results non-empty %>
+    <p><%= img(full_gif) %></p>
   <% end %>
-  <% if @small_gif && @phone_number %>
-    <% if send_gif(@small_gif, @phone_number) %>
+  <% if @phone_number.nil? %>
+    <p>Enter a valid phone number to send a gif as a text message.</p>
+  <% else %> <% # phone number is valid %>
+    <% if @gif_sent %>
       <p>Sent gif related to search text "<%= @search_text %>" to phone number "<%= @phone_number %>".</p>
-    <% else %><% #send_gif failed; probably environment variables weren't initialized %>
+    <% else %><% # send_gif failed; probably environment variables weren't initialized %>
+	  <% #TODO: consider not allowing phone numbers to be input if environment variables weren't initialized %>
+	  <% # this could distinguish giphy errors from env errors %>
       <p>Something went wrong. Try another search, or phone number?</p>
     <% end %>
-  <% else %><% #@small_gif or @phone_number is nil %>
-    <p>Enter a valid phone number to send a gif as a text message.</p>
   <% end %>
-<% else %><% #@search_text is nil %>
-  <p>Please enter valid search text.</p>
 <% end %>
 
 <%= erb :form %>
