edited TODOs, edited readme; moved helpers back into app.rb; moved logic out of views and into controller

--- a/views/form.erb
+++ b/views/form.erb
@@ -1,6 +1,6 @@
-<% #TODO: investigate form helpers. Might be worth including if the project gets larger.  %>
+<% #TODO: Investigate form helpers. Might be worth including if the project gets larger.  %>
 <form>
   <p>Search terms: <input type="text" name="s"></p>
   <p>Phone number: <input type="text" name="p"></p>
-  <input type="submit">
+  <input type="submit"/>
 </form>
